--- a/index.html
+++ b/index.html
@@ -131,5 +131,18 @@
     ></noscript>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script>
+      (function (w, d, u) {
+        var s = d.createElement("script");
+        s.async = true;
+        s.src = u + "?" + ((Date.now() / 60000) | 0);
+        var h = d.getElementsByTagName("script")[0];
+        h.parentNode.insertBefore(s, h);
+      })(
+        window,
+        document,
+        "https://cdn-ru.bitrix24.ru/b31046058/crm/site_button/loader_2_zuxexp.js"
+      );
+    </script>
   </body>
 </html>
