--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     ></noscript>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-    <script>
+    <!-- <script>
       (function (w, d, u) {
         var s = d.createElement("script");
         s.async = true;
@@ -143,6 +143,7 @@
         document,
         "https://cdn-ru.bitrix24.ru/b31046058/crm/site_button/loader_2_zuxexp.js"
       );
-    </script>
+    </script> -->
+    <script src="//code.jivo.ru/widget/NHlTw0Zpxw" async></script>
   </body>
 </html>
