--- a/index.html
+++ b/index.html
@@ -107,14 +107,7 @@
         webvisor: true,
       });
     </script>
-    <noscript
-      ><div>
-        <img
-          src="https://mc.yandex.ru/watch/98477147"
-          style="position: absolute; left: -9999px"
-          alt=""
-        /></div
-    ></noscript>
+
     <!-- End Yandex.Metrika -->
   </head>
 
@@ -142,5 +135,15 @@
 
     <!-- JivoChat -->
     <!-- <script src="//code.jivo.ru/widget/NHlTw0Zpxw" async></script> -->
+
+    <noscript>
+      <div>
+        <img
+          src="https://mc.yandex.ru/watch/98477147"
+          style="position: absolute; left: -9999px"
+          alt=""
+        />
+      </div>
+    </noscript>
   </body>
 </html>
