Поставил счетчик от сбера

--- a/index.html
+++ b/index.html
@@ -76,6 +76,35 @@
       content="https://autocarmsk.ru/assets/img/geely.jpg"
     />
 
+    <!-- Top100 (Kraken) Counter -->
+<script>
+  (function (w, d, c) {
+  (w[c] = w[c] || []).push(function() {
+      var options = {
+          project: 7735593,
+          attributes_dataset: [ "your-attribute" ],
+      };
+      try {
+          w.top100Counter = new top100(options);
+      } catch(e) { }
+  });
+  var n = d.getElementsByTagName("script")[0],
+  s = d.createElement("script"),
+  f = function () { n.parentNode.insertBefore(s, n); };
+  s.type = "text/javascript";
+  s.async = true;
+  s.src =
+  (d.location.protocol == "https:" ? "https:" : "http:") +
+  "//st.top100.ru/top100/top100.js";
+
+  if (w.opera == "[object Opera]") {
+  d.addEventListener("DOMContentLoaded", f, false);
+} else { f(); }
+})(window, document, "_top100q");
+</script>
+
+<!-- END Top100 (Kraken) Counter -->
+
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
@@ -146,5 +175,8 @@
         />
       </div>
     </noscript>
+    <noscript>
+      <img src="//counter.rambler.ru/top100.cnt?pid=7735593" alt="Топ-100" />
+      </noscript>
   </body>
 </html>
