Добавил счетчик рекламы VK

--- a/index.html
+++ b/index.html
@@ -178,5 +178,6 @@
     <noscript>
       <img src="//counter.rambler.ru/top100.cnt?pid=7735593" alt="Топ-100" />
       </noscript>
+      <script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src='https://vk.com/js/api/openapi.js?173',t.onload=function(){VK.Retargeting.Init("VK-RTRG-1926608-6356S"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-1926608-6356S" style="position:fixed; left:-999px;" alt=""/></noscript>
   </body>
 </html>
